--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/MUSA_timeline-1.css">
     <link rel="stylesheet" href="assets/css/MUSA_timeline.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="assets/css/News-Cards.css">
     <link rel="stylesheet" href="assets/css/Products-UI.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -39,12 +40,12 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="https://kodelang.dev">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="https://kodelang.dev">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
         </nav>
@@ -90,7 +91,7 @@
                         <div class="card border rounded shadow">
                             <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
                             <div class="card-body text-center">
-                                <h4 class="card-title">Hibrid Development</h4>
+                                <h4 class="card-title">Hybrid Development</h4>
                             </div>
                         </div>
                     </div>
@@ -352,6 +353,26 @@
         </div>
         <div></div>
         <div class="btn-group" role="group"></div>
+        <div style="margin-top: 50px;margin-bottom: 50px;">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Partner</h1>
+                    </div>
+                </div>
+                <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
+                    <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                        <div class="card border rounded shadow">
+                            <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/onlearnyLogo%202.png"></div>
+                            <div class="card-body text-center">
+                                <h4 class="card-title">OnLearny<br></h4>
+                                <p>On Learning, Onl Earning<br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="highlight-blue">
             <div class="container">
                 <div class="intro">
