--- a/donate.html
+++ b/donate.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/MUSA_timeline-1.css">
     <link rel="stylesheet" href="assets/css/MUSA_timeline.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="assets/css/News-Cards.css">
     <link rel="stylesheet" href="assets/css/Products-UI.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -37,12 +38,12 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="https://kodelang.dev">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="https://kodelang.dev">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
     </nav>
