xỏa bỏ viền ảnh

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
                     <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
                         <div class="card border rounded shadow">
-                            <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/onlearnyLogo%202.png" width="150"></div>
+                            <div class="text-center" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/onlearnyLogo%202.png" width="150"></div>
                             <div class="card-body text-center">
                                 <h4 class="card-title">OnLearny<br></h4>
                                 <p>On Learning, Onl Earning<br></p>
