--- a/storage/index.html
+++ b/storage/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://spring-math-1da2.kodestorage.workers.dev/">
+        <meta http-equiv="refresh" content="1;url=https://access.kodestorage.workers.dev/">
         <script type="text/javascript">
-            window.location.href = "https://spring-math-1da2.kodestorage.workers.dev/"
+            window.location.href = "https://access.kodestorage.workers.dev/"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='https://spring-math-1da2.kodestorage.workers.dev/'>link to our page.</a>
+        If you are not redirected automatically, follow the <a href='https://access.kodestorage.workers.dev/'>link to our page.</a>
     </body
 </html>
