--- a/byteview/data/11c10/index.html
+++ b/byteview/data/11c10/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="container-fluid">
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                    <h3 class="text-dark mb-0">Tổng hợp dữ liệu</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i class="fas fa-download fa-sm text-white-50"></i>Xuất dữ liệu dưới dạng Excel</a></div>
+                    <h3 class="text-dark mb-0">Tổng hợp dữ liệu</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="https://github.com/kodestudio/kodestudio.github.io/raw/master/byteview/data/11c10/Data.xlsx"><i class="fas fa-download fa-sm text-white-50"></i>Xuất dữ liệu dưới dạng Excel</a></div>
                 <div class="row">
                     <div class="col-md-6 col-xl-3 mb-4">
                         <div class="card shadow border-left-primary py-2">
