--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: FlexStart - v1.2.0
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -49,12 +44,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Trang chủ</a></li>
-          <li><a class="nav-link scrollto" href="#about">Blog</a></li>
-          <li><a class="nav-link scrollto" href="#services">Sản phẩm</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Dự án</a></li>
-          <li><a class="nav-link scrollto" href="#team">Cửa hàng</a></li>
-          <li><a class="nav-link scrollto" href="#team">Về chúng tôi</a></li>
+          <li><a class="nav-link scrollto active" href="#">Trang chủ</a></li>
+          <li><a class="nav-link scrollto" href="#">Blog</a></li>
+          <li><a class="nav-link scrollto" href="#">Sản phẩm</a></li>
+          <li><a class="nav-link scrollto" href="#">Dự án</a></li>
+          <li><a class="nav-link scrollto" href="#">Cửa hàng</a></li>
+          <li><a class="nav-link scrollto" href="#">Về chúng tôi</a></li>
           <li class="dropdown"><a href="#"><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Liên hệ</a></li>
@@ -70,7 +65,7 @@
               <li><a href="#">Việc làm</a></li>
             </ul>
           </li>
-          <li><a class="getstarted scrollto" href="#about">Quản lí</a></li>
+          <li><a class="getstarted scrollto" href="#">Quản lí</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -117,7 +112,7 @@
               <p>
                 Hầu hết thành viên của Kode là học sinh, sinh viên. Chúng tôi biết đến nhau và tham gia thông qua những lời giới thiệu từ bạn bè. Kode như một câu lạc bộ nhưng không bị giới hạn về địa lý.
               </p>
-              <h2>Tổ chức nghiên cứu về?</h2>
+              <h2>Lĩnh vực nghiên cứu</h2>
               <p>
                 Các vấn đề về công nghệ thông tin và lập trình.
               </p>
@@ -155,7 +150,7 @@
             <div class="box" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
               <h3>Kết nối</h3>
-              <p>'Kode là môi trường trung gian kết nối bạn đến tất cả những thành viên cùng đam mê. Trong thế giới internet rộng lớn thì đây sẽ là địa điểm tuyệt vời cho bạn.</p>
+              <p>Kode là môi trường trung gian kết nối bạn đến tất cả những thành viên cùng đam mê. Trong thế giới internet rộng lớn thì đây sẽ là địa điểm tuyệt vời cho bạn.</p>
             </div>
           </div>
 
@@ -662,7 +657,6 @@
               <img src="assets/img/activity/pi.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Mạch Raspberry nghiên cứu</h4>
-                <p>App</p>
               </div>
             </div>
           </div>
@@ -822,7 +816,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Thành viên buổi đầu</h2>
+          <h2>Thành viên thời kì sơ khai</h2>
         </header>
 
         <div class="row gy-4">
@@ -878,14 +872,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/human/truong.jpg" class="img-fluid" alt="">
+                <img src="assets/img/human/hung.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://www.facebook.com/profile.php?id=100039568247672"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.facebook.com/trinhdoduyhungss"><i class="bi bi-facebook"></i></a>
+                  <a href="https://github.com/trinhdoduyhungss"><i class="bi bi-github"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Nguyễn Đoan Trường</h4>
-                <span>Biên tập viên</span>
+                <h4>Trịnh Đỗ Duy Hưng</h4>
+                <span>Cố vấn</span>
               </div>
             </div>
           </div>
@@ -913,6 +908,8 @@
             <div class="swiper-slide"><img src="assets/img/parner/tvt.jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/parner/codetrain.svg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/parner/visef.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/parner/code.png" class="img-fluid" alt=""></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
