--- a/index.html
+++ b/index.html
@@ -44,25 +44,24 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#">Trang chủ</a></li>
-          <li><a class="nav-link scrollto" href="#">Blog</a></li>
-          <li><a class="nav-link scrollto" href="#">Sản phẩm</a></li>
-          <li><a class="nav-link scrollto" href="#">Dự án</a></li>
-          <li><a class="nav-link scrollto" href="#">Cửa hàng</a></li>
-          <li><a class="nav-link scrollto" href="#">Về chúng tôi</a></li>
-          <li class="dropdown"><a href="#"><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto active" href="https://kodelang.dev">Trang chủ</a></li>
+          <li><a class="nav-link scrollto" href="https://kodelang.dev/blog">Blog</a></li>
+          <li><a class="nav-link scrollto" href="https://kodelang.dev/product">Sản phẩm</a></li>
+          <li><a class="nav-link scrollto" href="https://kodelang.dev/project">Dự án</a></li>
+          <li><a class="nav-link scrollto" href="https://kodelang.dev/store">Cửa hàng</a></li>
+          <li><a class="nav-link scrollto" href="https://kodelang.dev/about">Về chúng tôi</a></li>
+          <li class="dropdown"><a href=""><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Liên hệ</a></li>
+              <li><a href="https://kodelang.dev/contact">Liên hệ</a></li>
               <li class="dropdown"><a href="#"><span>Mạng xã hội</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Facebook</a></li>
-                  <li><a href="#">GitHub</a></li>
-                  <li><a href="#">YouTube</a></li>
-                  <li><a href="#">Twitter</a></li>
+                  <li><a href="https://www.facebook.com/kode.page">Facebook</a></li>
+                  <li><a href="https://www.github.com/kodestudio">GitHub</a></li>
+                  <li><a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A">YouTube</a></li>
                 </ul>
               </li>
-              <li><a href="#">Ủng hộ</a></li>
-              <li><a href="#">Việc làm</a></li>
+              <li><a href="https://kodelang.dev/donate">Ủng hộ</a></li>
+              <li><a href="https://kodelang.dev/job">Việc làm</a></li>
             </ul>
           </li>
           <li><a class="getstarted scrollto" href="#">Quản lí</a></li>
