Thêm auto render header and footer. Thêm một số trang

--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
 
         <ol>
           <li><a href="index.html">Trang chủ</a></li>
-          <li>Ủng hộ</li>
+          <li>Về chúng tôi</li>
         </ol>
-        <h2>Ủng hộ</h2>
+        <h2>Về chúng tôi</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
