--- a/blog.html
+++ b/blog.html
@@ -50,9 +50,9 @@
 
         <ol>
           <li><a href="index.html">Trang chủ</a></li>
-          <li>Ủng hộ</li>
+          <li>Blog</li>
         </ol>
-        <h2>Ủng hộ</h2>
+        <h2>Blog</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -60,7 +60,7 @@
     <section class="inner-page">
       <div class="container">
         <p>
-          
+          Blog ở đây
         </p>
       </div>
     </section>
