--- a/terms.html
+++ b/terms.html
@@ -50,9 +50,9 @@
 
         <ol>
           <li><a href="index.html">Trang chủ</a></li>
-          <li>Ủng hộ</li>
+          <li>Điều kiện và quy định</li>
         </ol>
-        <h2>Ủng hộ</h2>
+        <h2>Điều kiện và quy định</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
