--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>404 - Page not found</title>
-    <meta name="viewport" content="width=device-with, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -44,6 +44,7 @@
             text-align: center;
             margin-top: 50px;
         }
+       
     </style>
 </head>
 
