Sủa lỗi trính tả, linh tinh

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Trang chủ</a></li>
           <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
-          <li><a class="nav-link scrollto" href="product.html">Sản phẩm</a></li>
           <li><a class="nav-link scrollto" href="project.html">Dự án</a></li>
-          <li><a class="nav-link scrollto" href="store.html">Cửa hàng</a></li>
           <li><a class="nav-link scrollto" href="about.html">Về chúng tôi</a></li>
           <li class="dropdown"><a href=""><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -64,15 +62,17 @@
               <li class="dropdown"><a href="#"><span>Mạng xã hội</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="https://www.facebook.com/kode.page">Facebook</a></li>
+                  <li><a href="https://www.instagram.com/kode.page">Instagram</a></li>
                   <li><a href="https://www.github.com/kodestudio">GitHub</a></li>
                   <li><a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A">YouTube</a></li>
+                  <li><a href="https://www.twitter.com/kodestudio">Twitter</a></li>
                 </ul>
               </li>
               <li><a href="donate.html">Ủng hộ</a></li>
               <li><a href="job.html">Việc làm</a></li>
             </ul>
+            <li><a class="getstarted scrollto" href="#about">Tham gia ngay!</a></li>
           </li>
-          <li><a class="getstarted scrollto" href="#">Quản lí</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -86,8 +86,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Kode - ở đây chỉ có code và những người viết code</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin và đây là trang chủ của chúng tôi.</h2>
+          <h1 data-aos="fade-up">Kode</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -147,7 +147,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Mục đích tổ chức</h2>
+          <h2>SỨ MỆNH</h2>
           <p></p>
         </header>
 
@@ -270,7 +270,7 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Tạo các cuộc thi lập trình</h3>
+                  <h3>Tổ chức các cuộc thi lập trình</h3>
                 </div>
               </div>
 
@@ -284,7 +284,7 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Tổ chức gặp mặt, giao lưu</h3>
+                  <h3>Tổ chức các buổi gặp mặt, giao lưu</h3>
                 </div>
               </div>
 
@@ -489,7 +489,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>F.A.Q</h2>
+          <h2>Hỏi và đáp</h2>
           <p>Câu hỏi thường gặp</p>
         </header>
 
@@ -552,7 +552,7 @@
                 </h2>
                 <div id="faq2-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Kode hoạt động trên tinh thần miễn phí. Bạn không cần phải đóng bất kì tiền quỹ. Tuy nhiên trong quá trình hoạt động và duy trì trang thiết bị sẽ có những chi phí phát sinh thì chúng tôi sẽ thảo luận và xin ý kiến các bạn. Cứ yên tâm đi vì không tốn kém gì nhiều đâu nhá.
+                    Kode hoạt động trên tinh thần miễn phí. Bạn không cần phải đóng bất kì tiền quỹ. Tuy nhiên trong quá trình hoạt động và duy trì trang thiết bị sẽ có những chi phí phát sinh thì chúng tôi sẽ thảo luận và xin ý kiến các bạn. Cứ yên tâm đi vì không tốn kém gì nhiều đâu.
                   </div>
                 </div>
               </div>
@@ -955,15 +955,15 @@
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Thư điện tử</h3>
-                  <p>kodestudio.dev@gmail.com</p>
                   <p>contact@kodelang.dev</p>
+                  <p>kodestudio.dev@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-clock"></i>
                   <h3>Giờ mở cửa</h3>
-                  <p>Thứ Hai - Thứ 6<br>9:00AM - 03:00PM</p>
+                  <p>Thứ 2 - Thứ 6<br>9:00 Sáng - 03:00 Chiều</p>
                 </div>
               </div>
             </div>
@@ -1034,9 +1034,9 @@
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <!--<img src="assets/img/logo.png" alt="">-->
-              <span>Kode Space</span>
+              <span>Kode</span>
             </a>
-            <p>Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin và đây là trang chủ của chúng tôi.</p>
+            <p>Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</p>
             <div class="social-links mt-3">
               <a href="https://www.twitter.com/kodestudio" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.facebook.com/kode.page" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -1071,11 +1071,13 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Thông tin nhanh</h4>
             <p>
+              <b>Địa chỉ:</b><br>
               Khóm 7 <br>
-              Thị trấn Trần Văn Thời, huyện Trần Văn Thời<br>
+              Thị trấn Trần Văn Thời,<br> huyện Trần Văn Thời,<br>
               Cà Mau, Việt Nam <br><br>
-              <strong>Số điện thoại:</strong> +84 <br>
-              <strong>Thư điện tử:</strong> kodestudio.dev@gmail.com<br>
+              <strong>Số điện thoại:</strong> +84 <br><br>
+              <strong>Thư điện tử:</strong><br> contact@kodelang.dev<br>kodestudio.dev@gmail.com
+              
             </p>
 
           </div>
@@ -1093,7 +1095,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit by <a href="https://www.github.com/quocthinhvo">@quocthinhvo</a>
+        Edit by <a href="https://www.github.com/quocthinhvo">@quocthinhvo</a>
       </div>
     </div>
   </footer><!-- End Footer -->
