--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <li><a href="donate.html">Ủng hộ</a></li>
               <li><a href="job.html">Việc làm</a></li>
             </ul>
-            <li><a class="getstarted scrollto" href="#about">Tham gia ngay!</a></li>
+            <li><a class="getstarted scrollto" href="https://www.facebook.com/quocthinhvo.dev">Tham gia ngay!</a></li>
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -1088,14 +1088,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kode</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Kode</span></strong> 2021. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Edit by <a href="https://www.github.com/quocthinhvo">@quocthinhvo</a>
+        Edited by <a href="https://www.github.com/quocthinhvo">@quocthinhvo</a>
       </div>
     </div>
   </footer><!-- End Footer -->
