Sủa tiếp phần footer và 1 số bug về văn học :)))

--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
               Khóm 7 <br>
               Thị trấn Trần Văn Thời,<br> huyện Trần Văn Thời,<br>
               Cà Mau, Việt Nam <br><br>
-              <strong>Số điện thoại:</strong> +84 <br><br>
+              <strong>Số điện thoại:</strong><br> +84 <br><br>
               <strong>Thư điện tử:</strong><br> contact@kodelang.dev<br>kodestudio.dev@gmail.com
               
             </p>
