--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Trang chủ</a></li>
           <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
+          <li><a class="nav-link scrollto" href="product.html">Sản phẩm</a></li>
           <li><a class="nav-link scrollto" href="project.html">Dự án</a></li>
           <li><a class="nav-link scrollto" href="about.html">Về chúng tôi</a></li>
           <li class="dropdown"><a href=""><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
