Add some main project

--- a/project.html
+++ b/project.html
@@ -57,6 +57,120 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
+    <!-- ======= Project Section ======= -->
+    <section id="product" class="pricing">
+
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h2>CÁC DỰ ÁN CỦA KODE</h2>
+          <p></p>
+        </header>
+
+        <div class="row gy-4" data-aos="fade-left">
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+            <div class="box">
+              <h3 style="color: #07d5c0;">Visual Periodic Table</h3>
+              <img src="assets/img/project/chemistry.png" class="img-fluid" alt="">
+              <ul>
+                <li>Bắt đầu từ 2018</li>
+                <li>Ngôn ngữ C#</li>
+              </ul>
+              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+            <div class="box">
+              <span class="featured">Quan trọng</span>
+              <h3 style="color: #65c600;">Chuỗi dự án Kode+Pascal</h3>
+              <img src="assets/img/project/kode.png" class="img-fluid" alt="">
+              <ul>
+                <li>Bắt đầu từ 2019</li>
+                <li>Ngôn ngữ Pascal, JavaScript</li>
+              </ul>
+              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="box">
+              <h3 style="color: #ff901c;">Diễn đàn PNH</h3>
+              <img src="assets/img/project/forum.png" class="img-fluid" alt="">
+              <ul>
+                <li>Bắt đầu từ 2021</li>
+                <li>Ngôn ngữ JavaScript</li>
+              </ul>
+              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="box">
+              <h3 style="color: #ff0071;">Kode Mobile Studio</h3>
+              <img src="assets/img/project/kodestudio.png" class="img-fluid" alt="">
+              <ul>
+                <li>Bắt đầu từ 2019</li>
+                <li>Ngôn ngữ Java</li>
+              </ul>
+              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+            </div>
+          </div>
+
+
+            <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+              <div class="box">
+                <h3 style="color: #0759d5;">Hydro OS</h3>
+                <img src="assets/img/project/hydroos.png" class="img-fluid" alt="">
+                <ul>
+                  <li>Bắt đầu từ 2020</li>
+                  <li>Ngôn ngữ C++, Python</li>
+                </ul>
+                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+              <div class="box">
+                <h3 style="color: #c60073;">Hệ điều hành JetOS</h3>
+                <img src="assets/img/project/jetos.png" class="img-fluid" alt="">
+                <ul>
+                  <li>Bắt đầu từ 2020</li>
+                  <li>Ngôn ngữ C#</li>
+                </ul>
+                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+              <div class="box">
+                <h3 style="color: #1cff8e;">Kode Messenger</h3>
+                <img src="assets/img/project/kodemess.png" class="img-fluid" alt="">
+                <ul>
+                  <li>Bắt đầu từ 2021</li>
+                  <li>Ngôn ngữ Dark</li>
+                </ul>
+                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+              <div class="box">
+                <h3 style="color: #ff0015;">Neon</h3>
+                <img src="assets/img/project/neon.png" class="img-fluid" alt="">
+                <ul>
+                  <li>Bắt đầu từ 2020</li>
+                  <li>Ngôn ngữ JavaScript</li>
+                </ul>
+                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              </div>
+            </div>
+        </div>
+
+      </div>
+
+    </section><!-- End Project Section -->
     <section class="inner-page">
       <div class="container">
         <p>
