Thêm link GitHub của các dự án trong phần "dự án tiêu biểu"

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Các dự án tiêu biểu</h2>
+          <h2>CÁC DỰ ÁN TIÊU BIỂU</h2>
           <p></p>
         </header>
 
@@ -389,20 +389,20 @@
                 <li>Bắt đầu từ 2018</li>
                 <li>Ngôn ngữ C#</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <span class="featured">Quan trọng</span>
-              <h3 style="color: #65c600;">Chuỗi dự án Kode+Pascal</h3>
+              <h3 style="color: #65c600;">Chuỗi dự án Kode + Pascal</h3>
               <img src="assets/img/project/kode.png" class="img-fluid" alt="">
               <ul>
                 <li>Bắt đầu từ 2019</li>
                 <li>Ngôn ngữ Pascal, JavaScript</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/kodestudio/kpstore" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
@@ -426,20 +426,20 @@
                 <li>Bắt đầu từ 2019</li>
                 <li>Ngôn ngữ Java</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/quocthinhvo/kmstudio" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
 
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
-                <h3 style="color: #0759d5;">Hydro OS</h3>
+                <h3 style="color: #0759d5;">Hệ điều hành Hydro OS</h3>
                 <img src="assets/img/project/hydroos.png" class="img-fluid" alt="">
                 <ul>
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ C++, Python</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/HydroOS" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -451,7 +451,7 @@
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ C#</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/jetos" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -463,7 +463,7 @@
                   <li>Bắt đầu từ 2021</li>
                   <li>Ngôn ngữ Dark</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/spinel" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -475,7 +475,7 @@
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ JavaScript</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
         </div>
